--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
         <h3>
             <a id="aboutme" href="aboutme.html">Про мене</a>
         </h3>
-        <img src="images/aboutmephoto.jpg" height="250" width="200" alt="фотографія Юри Михайлів">
-        <img src="images/aboutmephoto.jpg" height="250" width="200" alt="фотографія Юри Михайлів">
+        <img src="images/aboutmephoto.jpg" height="250" width="200" alt="фотографія Юри Михайлів"
         <footer class="page-footer">
             <svg width="220" height="60">
                 <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
