--- a/beerpubs.html
+++ b/beerpubs.html
@@ -84,11 +84,17 @@
   
   
 <footer class="page-footer">
- <svg width="220" height="60">
-    <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
-    </svg> <br>
-    <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
-    </footer>
+            <svg width="220" height="60">
+                <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
+            </svg>
+            <br>
+          <h4>Надмірне зловживання алкоголем робить тебе не класним пам'ятай це</h4>
+            <a id="telegram" href="https://t.me/beersandbrewing">Телеграм канал</a>
+            <div class="footer-copyright text-center py-3">© 2020 Lemberg:
+              <a id="link" href="https://yuriimykhailiv.github.io/beerandbreewing/">Beer&Breewing</a>
+            </div>
+ 
+        </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
